// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore component renders correctly 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-4 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-5"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly when trigger button is clicked 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-53 MuiButton-contained buttonStyles-contained-56 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-57"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-79 MuiButton-contained buttonStyles-contained-82 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-83"
    >
      Close
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with close button is clicked 1`] = `
<div>
  <div />
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-105 MuiButton-contained buttonStyles-contained-108 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-109"
    >
      Trigger
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`ShowMore component renders correctly with content expanded 1`] = `
<div>
  <div>
    Show more content
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root buttonStyles-root-27 MuiButton-contained buttonStyles-contained-30 MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label buttonStyles-label-31"
    >
      Show more
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
